<resources>

    <!-- General -->
    <string name="lorem_ipsum_title">Lorem ipsum sit dolor amet. </string>
    <string name="lorem_ipsum">Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. Lorem ipsum sit dolor amet. </string>
    <string name="continue_btn">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="no_results_text">No results found</string>
    <string name="no_description_found">Description not found</string>

    <!-- Login Screen -->
    <string name="email_hint">E-mail</string>
    <string name="password_hint">Password</string>
    <string name="login_btn_text">Log in</string>
    <string name="register_btn_text">Create an account today! <b>Register</b></string>

    <!-- Register Screen -->
    <string name="confirm_pass_hint">Confirm Password</string>
    <string name="register_btn">Register</string>

    <!-- Onboarding -->
    <string name="pre_home_additionals_title">Additional Information</string>
    <string name="additionals_subheader">What is your profile info</string>
    <string name="username">Username</string>

    <!-- Dashboard -->

    <!-- Home -->
    <string name="home_title">Home</string>
    <string name="more">More</string>
    <string name="top_rated_title">Top Rated Series</string>
    <string name="trending_title">Trending Series</string>
    <string name="airing_today_title">Airing Today Series</string>
    <string name="all_series_genre_placeholder">%s Series</string>
    <string name="all">ALL</string>
    <string name="user_greeting">Hello</string>
    <string name="dummy_username">testopoulos</string>

    <!-- Discover -->
    <string name="discover_screen_title">Series Genres</string>
    <string name="discover_title">Discover</string>
    <string name="search">Search</string>

    <!-- Forum -->
    <string name="forum_screen_title">Discussion</string>

    <!-- Profile Screen -->
    <string name="profile_title">Profile</string>
    <string name="profile_dummy_username">foustanos</string>
    <string name="bio_placeholder">\&quot;%s\&quot;</string>
    <string name="empty_bio">This user hasn\'t written a bio yet.</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="profile_empty_prefs_title">Empty preferences</string>
    <string name="profile_empty_prefs_desc">Click here to add your series preferences</string>
    <string name="profile_prefs_title">Series Preferences</string>
    <string name="profile_prefs_desc">You told us that you enjoy <b>%s</b> series</string>
    <string name="profile_prefs_desc_other_user">This user enjoys <b>%s</b> series</string>
    <string name="edit"><u>Edit</u></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile_empty_watchlist_title">Empty watchlist</string>
    <string name="profile_empty_watchlist_desc">The series that you add to your watchlist will be displayed here</string>
    <string name="profile_empty_following_title">Empty Following</string>
    <string name="profile_empty_following_desc">Once you start following a user, you can find him/her here</string>
    <string name="profile_empty_followers_title">Empty Followers</string>
    <string name="profile_empty_followers_desc">Once you someone starts following you, you can find him/her here</string>


    <string name="ask_user_logout">Do you want to logout?</string>
    <string name="logout">Logout</string>

    <!-- Upload Profile Image Screen -->
    <string name="upload_image_title">Profile Image</string>
    <string name="upload_image_header">Upload a new profile image for your account</string>
    <string name="uploading_image">We are updating your profile..</string>
    <string name="bs_title">Upload a new profile image</string>
    <string name="bs_first_option">Open camera</string>
    <string name="bs_second_option">Open gallery</string>

    <!-- Update Profile Info Screen -->
    <string name="update_info_title">Edit Profile Info</string>
    <string name="update_info_header">Update your profile information here</string>
    <string name="bio">Bio</string>

    <!-- User Preferences screen -->
    <string name="preferences_title">My preferences</string>
    <string name="preferences_header">Choose up to three (3) series preferences</string>

    <!-- Details -->
    <string name="details_screen_title">Series Details</string>
    <string name="dummy_series_name">Wolverine</string>
    <string name="dummy_series_release_date">2023–11–02</string>
    <string name="episodes">Episodes</string>
    <string name="seasons">Seasons</string>
    <string name="series_details_storyline">Storyline</string>
    <string name="details_cast_title">Cast</string>
    <string name="reviews_header">Reviews</string>
    <string name="similar_series_title">Similar Series</string>
    <string name="recommended_series_title">Recommended Series</string>
    <string name="rating_bs_title">Rate this series</string>
    <string name="rating_bs_desc">We\'d love to know your opinion on this series. Simply choose the number of stars for this series.</string>
    <string name="type_your_review_here_optional">Type your review here (optional)..</string>
    <string name="rating_bs_btn">Submit Rating</string>

    <!-- Actor Details -->
    <string name="actor_details_title">Actor Details</string>
    <string name="known_for_series">Known for series</string>
    <string name="also_known_as">Also known as: %s</string>
    <string name="not_found">Not found</string>
    <string name="popularity">Popularity</string>
    <string name="popularity_placeholder">%1s\%%</string>
    <string name="dummy_popularity">100%</string>
    <string name="birthday">Birthday</string>
    <string name="dummy_birthday">19/09/1995</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="dummy_place_of_birth">Athens, Greece</string>
    <string name="biography">Biography</string>

    <!-- Add new thread -->
    <string name="new_thread_title">New Discussion</string>
    <string name="add_new_thread">Add new</string>
    <string name="thread_title_hint">Thread title</string>
    <string name="add_new_thread_btn">Add new thread</string>
    <string name="thread_message_hint">Type your thread\'s message here…</string>

    <!-- Thread details -->
    <string name="thread_details_screen_title">Discussion Details</string>
    <string name="thread_reply_hint">Reply to this forum thread…</string>

    <!-- Watchlist -->
    <string name="my_watchlist">My Watchlist</string>
    <string name="watchlist">Watchlist</string>

    <!-- Other user profile -->
    <string name="follow">Follow</string>
    <string name="user_empty_prefs_desc">This user hasn\'t added series preferences yet</string>
    <string name="user_empty_watchlist_desc">This user hasn\'t added series to watchlist yet</string>

    <!-- Settings Intro Screen -->
    <string name="additional_actions_title">Additional Actions</string>


    <!-- Analytics Screen -->
    <string name="analytics_title">Analytics</string>
    <string name="general">General</string>
    <string name="users_in_app">Users in app</string>
    <string name="forum_discussions_in_app">Forum Discussions in app</string>
    <string name="ratings_made_in_app">Ratings Made in app</string>
    <string name="reviews_made_in_app">Reviews Made in app</string>
    <string name="most_ratings_made_by">Most ratings made by</string>
    <string name="user_biggest_watchlist">User with the biggest watchlist</string>
    <string name="user_most_followers">Users with most followers</string>
    <string name="most_thread_replies_user">Most thread replies made by</string>
    <string name="top_rated_series_in_app">Top rated series in app</string>
    <string name="most_popular_forum_discussion">Most Popular Forum Discussion</string>
    <string name="users">Users</string>
    <string name="top_users_preferences">Top User\'s Preferences</string>
    <string name="top_users_prefs_disclamer">(This is calculated based on the preferences of the user\'s profile)</string>


    <!-- FAQ Screen -->
    <string name="faq_long_title">Faq (Frequently Asked Questions)</string>
    <string name="faq_brief_title">FAQs</string>

    <!-- About Screen -->
    <string name="about_app_title">About the app</string>
    <string name="about_app">This application was developed from Efstathios Karadimitriou as a part of his dissertation for his Master\'s degree in Informatics in University of Piraeus. \n \n The dissertation\'s title was "Development of a tv series application with personalized content and user interaction with other users (Android)". \n \n In this app, the user can: \n \n - Create an account and sign in \n - View &amp; Search tv series per category \n - Read about a specific tv series or actor \n - Rate a series \n - Start discussions with other users (Forum) \n - Personalize the user\'s profile \n - Follow other users inside the app \n \nThe supervisor of this dissertation was mr. Alepis Efthymios</string>


</resources>