<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="isOtherUser"
            type="Boolean" />

        <variable
            name="preferences"
            type="String" />

        <variable
            name="callback"
            type="com.stathis.core.adapters.profile.UserProfileCallback" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_m"
        app:cardCornerRadius="@dimen/dimen_10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dashed_bg"
            android:padding="@dimen/dimen_l">

            <ImageView
                android:id="@+id/emptyImgView"
                android:layout_width="@dimen/dimen_3xl"
                android:layout_height="@dimen/dimen_3xl"
                android:background="@drawable/ic_series_filter"
                android:backgroundTint="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/emptyTitleTxtView"
                style="@style/text_18_bold_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dimen_s"
                android:text="@string/profile_prefs_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emptyImgView" />

            <TextView
                android:id="@+id/emptyDescTxtView"
                style="@style/text_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{isOtherUser ? @string/profile_prefs_desc_other_user(preferences) : @string/profile_prefs_desc(preferences)}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emptyTitleTxtView"
                tools:text="@string/profile_prefs_desc" />

            <TextView
                android:id="@+id/editTxtView"
                style="@style/text_16_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_m"
                android:onClick="@{() -> callback.onPreferencesClick()}"
                android:text="@string/edit"
                android:textColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emptyDescTxtView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>