<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.stathis.domain.model.details.RatingPromoModel" />

        <variable
            name="callback"
            type="com.stathis.core.adapters.details.DetailsCallback" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_m"
        app:cardCornerRadius="@dimen/dimen_10">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dashed_bg"
            android:padding="@dimen/dimen_l">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/emptyImgView"
                android:layout_width="@dimen/dimen_3xl"
                android:layout_height="@dimen/dimen_2xl"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/rating" />

            <TextView
                android:id="@+id/emptyTitleTxtView"
                style="@style/text_18_bold_center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/dimen_s"
                android:text="@{model.title}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emptyImgView"
                tools:text="@string/profile_dummy_username" />

            <TextView
                android:id="@+id/emptyDescTxtView"
                style="@style/text_16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{model.description}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emptyTitleTxtView"
                tools:text="@string/profile_empty_watchlist_desc" />

            <TextView
                android:id="@+id/rateBtn"
                style="@style/text_16_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_m"
                android:onClick="@{() -> callback.onRateClick()}"
                android:padding="@dimen/dimen_s"
                android:text="@{model.ctaText}"
                android:textColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emptyDescTxtView"
                tools:text="@string/no_description_found" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>