<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.stathis.domain.model.TvSeriesDetails" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/dimen_m">

        <ImageView
            android:id="@+id/bgImgView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_200"
            android:contentDescription="@{model.name}"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:seriesDetailsImage="@{model}"
            tools:src="@mipmap/seriesmania_logo_round" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#90000000"
            app:layout_constraintBottom_toBottomOf="@id/bgImgView"
            app:layout_constraintTop_toTopOf="@id/bgImgView" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/dimen_xl"
            android:background="@drawable/round_corners_top_smaller"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/centerPosterCard" />

        <View
            android:id="@+id/centerPosterCard"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@id/posterCardView"
            app:layout_constraintEnd_toEndOf="@id/posterCardView"
            app:layout_constraintStart_toStartOf="@id/posterCardView"
            app:layout_constraintTop_toTopOf="@id/posterCardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/posterCardView"
            android:layout_width="@dimen/dimen_150"
            android:layout_height="@dimen/dimen_200"
            android:layout_marginTop="@dimen/dimen_1.5xl"
            app:cardCornerRadius="@dimen/dimen_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/posterImgView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@{model.posterPath}"
                android:scaleType="centerCrop"
                app:seriesDetailsImage="@{model}"
                tools:src="@mipmap/seriesmania_logo_round" />

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_m"
            app:layout_constraintTop_toBottomOf="@id/posterCardView">

            <TextView
                android:id="@+id/titleTxtView"
                style="@style/text_20_bold_dark_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/dimen_s"
                android:text="@{model.name}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy_series_name" />

            <TextView
                android:id="@+id/genreTxtView"
                style="@style/text_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@{model.genres}"
                android:textColor="@color/grey_bg_darker"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleTxtView"
                tools:text="Comedy" />

            <TextView
                android:id="@+id/popularityTxtView"
                style="@style/text_24_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_m"
                android:drawablePadding="@dimen/dimen_s"
                android:textColor="@color/yellow"
                app:drawableStartCompat="@drawable/ic_star"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/genreTxtView"
                app:seriesRatingTxt="@{model.voteAverage}"
                tools:text="8.3" />

            <TextView
                android:id="@+id/votesTxtView"
                style="@style/text_16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/grey_bg_darker"
                app:layout_constraintEnd_toStartOf="@id/episodeDescTxtView"
                app:layout_constraintStart_toStartOf="@id/popularityTxtView"
                app:layout_constraintTop_toBottomOf="@id/popularityTxtView"
                app:seriesVotes="@{model.voteCount}"
                tools:text="XX votes" />

            <TextView
                android:id="@+id/episodesTxtView"
                style="@style/text_24_bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_s"
                android:text="@{String.valueOf(model.numberOfEpisodes)}"
                android:textColor="@color/yellow"
                app:drawableStartCompat="@drawable/ic_season"
                app:drawableTint="@color/yellow"
                app:layout_constraintEnd_toStartOf="@id/seasonsTxtView"
                app:layout_constraintStart_toEndOf="@id/popularityTxtView"
                app:layout_constraintTop_toTopOf="@id/popularityTxtView"
                tools:text="15" />

            <TextView
                android:id="@+id/episodeDescTxtView"
                style="@style/text_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/episodes"
                android:textColor="@color/grey_bg_darker"
                app:layout_constraintEnd_toEndOf="@id/episodesTxtView"
                app:layout_constraintStart_toStartOf="@id/episodesTxtView"
                app:layout_constraintTop_toBottomOf="@id/episodesTxtView" />

            <TextView
                android:id="@+id/seasonsTxtView"
                style="@style/text_24_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/dimen_s"
                android:text="@{String.valueOf(model.numberOfSeasons)}"
                android:textColor="@color/yellow"
                app:drawableStartCompat="@drawable/ic_season"
                app:drawableTint="@color/yellow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/seasonsDescTxtView"
                app:layout_constraintTop_toTopOf="@id/popularityTxtView"
                tools:text="2" />

            <TextView
                android:id="@+id/seasonsDescTxtView"
                style="@style/text_16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seasons"
                android:textColor="@color/grey_bg_darker"
                app:layout_constraintEnd_toEndOf="@id/seasonsTxtView"
                app:layout_constraintTop_toBottomOf="@id/seasonsTxtView" />

            <TextView
                android:id="@+id/descriptionHeader"
                style="@style/text_18_bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_l"
                android:text="@string/series_details_storyline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/votesTxtView" />

            <TextView
                android:id="@+id/description"
                style="@style/text_16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_xs"
                android:alpha="0.7"
                app:layout_constraintEnd_toEndOf="@id/descriptionHeader"
                app:layout_constraintStart_toStartOf="@id/descriptionHeader"
                app:layout_constraintTop_toBottomOf="@+id/descriptionHeader"
                app:seriesDescription="@{model.overview}"
                tools:text="@string/series_details_storyline" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>